--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,6 @@ mysql-connector==2.2.9
 requests==2.31.0
 openai==0.28.0
 aiohttp==3.8.5
+matplotlib==3.8.0
+rect-intersection==0.10
+tiktoken==0.5.1
