--- a/compose.yaml
+++ b/compose.yaml
@@ -63,8 +63,11 @@ services:
   proxy:
     build: proxy
     restart: always
+    volumes:
+      - ./proxy/certs:/certs
     ports:
       - 80:80
+      - 443:443
     depends_on: 
       - backend
     networks:
