--- a/compose.yaml
+++ b/compose.yaml
@@ -4,10 +4,10 @@ services:
     image: mariadb:10-focal
     # If you really want to use MySQL, uncomment the following line
     #image: mysql:8
-    command: '--default-authentication-plugin=mysql_native_password'
+    command: "--default-authentication-plugin=mysql_native_password"
     restart: always
     healthcheck:
-      test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 --password="$$(cat /run/secrets/db-password)" --silent']
+      test: ["CMD-SHELL", 'mysqladmin ping -h 127.0.0.1 --password="$$(cat /run/secrets/db-password)" --silent']
       interval: 3s
       retries: 5
       start_period: 30s
@@ -59,19 +59,6 @@ services:
         condition: service_healthy
       unstructured-api:
         condition: service_healthy
-
-  proxy:
-    build: proxy
-    restart: always
-    volumes:
-      - ./proxy/certs:/certs
-    ports:
-      - 80:80
-      - 443:443
-    depends_on: 
-      - backend
-    networks:
-      - frontnet
 
 volumes:
   db-data:
