--- a/compose.yaml
+++ b/compose.yaml
@@ -26,11 +26,15 @@ services:
 
   unstructured-api:
     image: quay.io/unstructured-io/unstructured-api:latest
+    container_name: unstructured-api
     restart: always
     ports:
       - "8001:8000"
+    environment:
+      - UNSTRUCTURED_MEMORY_FREE_MINIMUM_MB=1000
     networks:
       - backnet
+    command: sh -c 'while :; do docker logs unstructured-api | grep -q "unstructured_api WARNING Rejecting because free memory" && docker restart unstructured-api; sleep 10; done'
     healthcheck:
       test: ["CMD-SHELL", "echo", "true"]
       interval: 30s
